syntax = "proto3";

option csharp_namespace = "PaymentGrpc";

package Payment;

service PaymentGrpcService {
	rpc CreateTransaction (CreateTransactionRequest) returns (CreateTransactionReply);
	rpc GetTransactionHistory (GetTransactionHistoryRequest) returns (GetTransactionHistoryReply);
	rpc ConfirmTransaction (ConfirmTransactionRequest) returns (CreateTransactionReply);
	rpc ResendOtpEmail (ResendOtpEmailRequest) returns (SendEmailReply);
}

message CreateTransactionRequest {	
    string tuitionId = 1;
    string studentId = 2;
    string payerId = 3;
}

message CreateTransactionReply {
	string paymentId = 1;
	string PayerId = 2;
	string StudentId = 3;
	string amount = 4;
	string status = 5;
	string CreateAt = 6;
}

message GetTransactionHistoryRequest {
	string studentId = 1;
}

message GetTransactionHistoryReply {
	repeated Transaction transactions = 1;
}

message Transaction {
	string paymentId = 1;
	string studentId = 2;
	string payerId = 3;
	string amount = 4;
	string status = 5;
	string createAt = 6;
	string updateAt = 7;
}

message ConfirmTransactionRequest {
	string paymentId = 1;
	string otp = 2;
	string email = 3;
}

message ResendOtpEmailRequest {
}

message SendEmailReply {
    bool success = 1;
    string message = 2;
}